@@ -36,8 +36,6 @@ skip = ^(?:base|strict|warnings|if|utf8|charnames|open|re|subs|version|Carp|Expo
 
 [ExtraTests]
 
-[MetaJSON]
-
 [MinimumPerl]
 
 [NextRelease]
@@ -45,6 +43,5 @@ skip = ^(?:base|strict|warnings|if|utf8|charnames|open|re|subs|version|Carp|Expo
 [OurPkgVersion]
 
 [Test::PodSpelling]
-stopwords = Simões
 stopwords = uk
 stopwords = Mozilla's
